UserAccount id -> username으로 변경 및 영향 받는 코드 업데이트